# oni-mvp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/core/: logging.py  paths.py  settings.py
app/domain/: models.py
app/infra/: supabase.py
app/services/: errors.py  repo.py  services_repo.py  supabase_client.py
app/web/: templates.py
app/web/routes/: home.py  services.py
app/web/static/: app.css  site.webmanifest
app/web/templates/: base.html  index.html
app/web/templates/services/: _add_result.html  _errors.html  _list.html  index.html
docs/: 01-setup.md
frontend/: package.json
frontend/src/: app.css
